# osc-validation

./: .gitignore  .gitmodules  LICENSE  README.md  esminigt2sv.py  osc_minsubset_definition.md  osi2osc.py  pyproject.toml  requirements.txt  trajectory_similarity.py  utils.py
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml
data/builtin/lichtblick_logs/: log_20250509_114341.jsonl
data/builtin/osirules/: omega-prime-rules.yml
data/builtin/simple_trajectories/: sv_trace1.xodr
docs/: oracle_generated_cases.md  validation_case_architecture.md  validation_case_strategy_summary.md
docs/dataproviders/: demo_download_dataprovider.py  demo_zip_dataprovider.py
docs/example_test_profile/: test_profile.toml
example/: 20240603T143803.535904Z_gt_370_3200_370_pmsf_dronetracker_119_cutout_ESMINIEXPORT.osi  20240603T143803.535904Z_odr_pmsf_dronetracker_119_cutout_GTGENSIM.xodr  20240603T143803.535904Z_osc_pmsf_dronetracker_119_cutout.xosc  20240603T143803.535904Z_osc_pmsf_dronetracker_119_cutoutNOTRIGGER.xosc  20240603T143803.535904Z_osc_pmsf_dronetracker_119_cutout_GTGENSIM.xosc  20240603T143803.535904Z_sv_370_3200_364_pmsf_dronetracker_119_cutout_OSI3TESTEXPORT.osi  20240603T143803.535904Z_sv_370_3200_370_pmsf_dronetracker_119_cutout_ESMINIEXPORT.osi  20240603T143803.535904Z_sv_370_3200_370_pmsf_dronetracker_119_cutout_GTGENSIMEXPORT_stripped.osi  UserSettings_gt-gen-simulator.ini
osc_validation/: __init__.py  assertions.py  cli.py  pytest_plugin.py  test_profile.py
osc_validation/dataproviders/: __init__.py  dataprovider.py
osc_validation/generation/: __init__.py  follow_trajectory_future_time_reference.py  follow_trajectory_teleport.py  osi2osc.py  trace_kinematics.py  trajectory_interpolation.py  xosc_builders.py
osc_validation/generation/init_actions/: __init__.py  models.py  xosc.py
osc_validation/generation/init_transforms/: __init__.py  init_pose.py  models.py
osc_validation/generation/sequencing_transforms/: README.md  __init__.py  models.py  trajectory.py
osc_validation/generation/trigger_transforms/: README.md  __init__.py  base.py  common.py  distance_to_position.py  models.py  simulation_time.py  speed.py  time_to_collision.py  traveled_distance.py
osc_validation/metrics/: __init__.py  object_state.py  osimetric.py  qccheck.py  trajectory_alignment_similarity.py  trajectory_similarity.py
osc_validation/oracles/: __init__.py  follow_trajectory_future_time_reference.py  follow_trajectory_teleport.py  init_actions.py  trajectory_interpolation.py
osc_validation/reference/: __init__.py  follow_trajectory_future_time_reference.py  follow_trajectory_teleport.py  init_actions.py  trace_kinematics.py  trajectory_interpolation.py
osc_validation/tools/: __init__.py  esmini.py  gtgen_cli.py  lichtblick.py  metadata.py  osc_simulator.py  osctool.py  osivisualizationtool.py  test-playwright.py
osc_validation/utils/: __init__.py  esminigt2sv.py  osi_channel_specification.py  osi_format_converter.py  osi_mcap.py  osi_reader.py  osi_writer.py  strip_sensorview.py  tool_helpers.py  utils.py
osc_validation/validation/: conftest.py  pytest.ini
specification/: osc_subset_definition.md  osc_subset_definition_iteration_1.md  osc_subset_definition_iteration_2.md
tests/: conftest.py  pytest.ini  test_assertions.py  test_cli_entrypoints.py  test_dataproviders.py  test_follow_trajectory_future_time_reference_oracle.py  test_init_actions_oracle.py  test_init_pose_reference_conversion.py  test_object_state_metric.py  test_osi2osc_generation.py  test_phase1_types.py  test_phase2_channel_spec.py  test_phase3_reading.py  test_phase4_writing.py  test_phase5_operations.py  test_pytest_plugin.py  test_qccheck.py  test_sdk_integration.py  test_test_profile.py  test_tool_helpers.py  test_tool_wrappers.py  test_trajectory_interpolation_reference.py  test_trajectory_similarity_metric.py  test_trigger_condition_edges.py  test_utils.py  test_xosc_builders.py
validation/: __init__.py
validation/scenario/: assertions.py  conftest.py  pytest.ini
(+33 files in other folders)
