[tool.poetry]
name = "osc-validation"
version = "0.1.0"
description = "This project implements a validation suite for ASAM OpenSCENARIO XML implementations for a restricted subset of ASAM OpenSCENARIO XML."
authors = ["Pierre R. Mai <pmai@pmsf.de>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/PMSFIT/osc-validation"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.2.2"
matplotlib = "^3.8.2"
open-simulation-interface = { git = "https://github.com/OpenSimulationInterface/open-simulation-interface.git", tag = "v3.7.0" }
pandas = "2.2.3"
similaritymeasures = "1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[tool.poetry.scripts]
osi2osc = 'osc_validation.generation.osi2osc:main'
esminigt2sv = 'osc_validation.utils.esminigt2sv:main'
strip_sensorview = 'osc_validation.utils.strip_sensorview:main'
trajectory_similarity = 'osc_validation.metrics.trajectory_similarity:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
